WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206394
[WinCairo][WK2] ASSERT(isUIThread()) is failing since
r254723
https://bugs.webkit.org/show_bug.cgi?id=206394
Summary
[WinCairo][WK2] ASSERT(isUIThread()) is failing since r254723
Fujii Hironori
Reported
2020-01-16 20:39:24 PST
[WinCairo][WK2] ASSERT(isUIThread()) is failing since
r254723
WinCairo port, Debug builds Since
r254723
(
Bug 206375
) 1. Start MiniBrowser --wk2 2. The assertion fails Callstack:
> WTF.dll!WTFCrash() Line 305 C++ > WTF.dll!WTFCrashWithInfo(int __formal=147, const char * __formal=0x00007ffe22880c20, const char * __formal=0x00007ffe22880bd0, int __formal=214) Line 619 C++ > WTF.dll!WTF::AtomString::init::__l2::<lambda>() Line 147 C++ > [External Code] > WTF.dll!WTF::AtomString::init() Line 155 C++ > WebKit2.dll!WebKit::InitializeWebKit2() Line 43 C++ > WebKit2.dll!API::Object::Object() Line 41 C++ > WebKit2.dll!API::ObjectImpl<85>::ObjectImpl<85>() Line 275 C++ > WebKit2.dll!API::PageConfiguration::PageConfiguration() Line 50 C++ > WebKit2.dll!API::PageConfiguration::create() Line 47 C++ > WebKit2.dll!WKPageConfigurationCreate() Line 45 C++ > MiniBrowserLib.dll!WebKitBrowserWindow::create(BrowserWindowClient & client={...}, HWND__ * mainWnd=0x00000000002f0300, bool __formal=false) Line 112 C++ > [External Code] > MiniBrowserLib.dll!MainWindow::init(std::function<WTF::Ref<BrowserWindow,WTF::DumbPtrTraits<BrowserWindow>> __cdecl(BrowserWindowClient &,HWND__ *,bool)> factory={...}, HINSTANCE__ * hInstance=0x00007ffe5f1a0000, bool usesLayeredWebView=false) Line 137 C++ > MiniBrowserLib.dll!wWinMain(HINSTANCE__ * hInstance=0x00007ff763870000, HINSTANCE__ * hPrevInstance=0x0000000000000000, wchar_t * lpstrCmdLine=0x0000023771556920, int nCmdShow=10) Line 90 C++ > MiniBrowserLib.dll!dllLauncherEntryPoint(HINSTANCE__ * hInstance=0x00007ff763870000, HINSTANCE__ * hPrevInstance=0x0000000000000000, wchar_t * lpstrCmdLine=0x0000023771556920, int nCmdShow=10) Line 145 C++ > MiniBrowser.exe!wWinMain(HINSTANCE__ * hInstance=0x00007ff763870000, HINSTANCE__ * hPrevInstance=0x0000000000000000, wchar_t * lpstrCmdLine=0x0000023771556920, int nCmdShow=10) Line 232 C++ > [External Code]
Attachments
Patch
(1.50 KB, patch)
2020-01-16 21:02 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-01-16 21:02:06 PST
Created
attachment 388008
[details]
Patch
Carlos Alberto Lopez Perez
Comment 2
2020-01-17 05:59:50 PST
Comment on
attachment 388008
[details]
Patch This issue is also affecting WPE and GTK
WebKit Commit Bot
Comment 3
2020-01-17 08:00:27 PST
Comment on
attachment 388008
[details]
Patch Clearing flags on attachment: 388008 Committed
r254746
: <
https://trac.webkit.org/changeset/254746
>
WebKit Commit Bot
Comment 4
2020-01-17 08:00:28 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-01-17 08:01:29 PST
<
rdar://problem/58682385
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug