[WinCairo][WK2] ASSERT(isUIThread()) is failing since r254723 https://bugs.webkit.org/show_bug.cgi?id=206394

Reviewed by Carlos Alberto Lopez Perez.

AtomString::init() should be called after
WTF::initializeThreading() is called on Windows because it has
ASSERT(isUIThread()) and Windows doesn't have a API to get main
thread handle like pthread_main_np.

* Shared/WebKit2Initialize.cpp:
(WebKit::InitializeWebKit2): Call AtomString::init() after JSC::initializeThreading().


Canonical link: https://commits.webkit.org/219492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254746 268f45cc-cd09-0410-ab3c-d52691b4dbfc