Source/WebKit/Shared/WebKit2Initialize.cpp
@@ -39,9 +39,9 @@ namespace WebKit {
 
 void InitializeWebKit2()
 {
-    AtomString::init();
     JSC::initializeThreading();
     RunLoop::initializeMainRunLoop();
+    AtomString::init();
 
     WTF::RefCountedBase::enableThreadingChecksGlobally();
 
